import("//build/buildflag_header.gni")
import("//build/config/chrome_build.gni")
import("//build/config/compiler/compiler.gni")
import("//build/config/features.gni")

source_set("app") {
  public_configs = [
    "//electron/build:electron_config",
  ]

  sources = [
    "atom_content_client.cc",
    "atom_content_client.h",
    "atom_main_delegate.h",
    "atom_main_delegate.cc",
    "uv_task_runner.cc",
    "uv_task_runner.h",
  ]

  if (is_mac) {
    sources += [
      "atom_main_delegate_mac.mm",
    ]
  }

  deps = [
    "//chrome/child",
    "//chrome/common",
    "//electron/muon/app",
    "//content/public/common",
    "//components/rappor/public/interfaces",
    "//gpu/config",
    "//media:media_features",
    "//third_party/widevine/cdm:headers",
  ]
}
