source_set("component_updater") {
  configs += [
    "//electron/build:electron_config",
  ]

  sources = [
    "brave_component_updater_configurator.cc",
    "brave_component_updater_configurator.h",
    "default_extensions.h",
    "extension_installer_traits.cc",
    "extension_installer_traits.h",
    "widevine_cdm_component_installer.cc",
    "widevine_cdm_component_installer.h",
  ]

  deps = [
    "//components/component_updater",
  ]
}
