source_set("component_updater") {
  configs += [
    "//electron/build:electron_config",
    # shouldn't be needed; but required on Windows
    "//build/config/compiler:no_size_t_to_int_warning"
  ]

  sources = [
    "brave_component_updater_configurator.cc",
    "brave_component_updater_configurator.h",
    "extension_installer_traits.cc",
    "extension_installer_traits.h",
    "widevine_cdm_component_installer.cc",
    "widevine_cdm_component_installer.h",
  ]

  deps = [
    "//third_party/widevine/cdm:headers",
    "//components/component_updater",
    "//components/update_client",
    "//content/public/common/"
  ]
}
