source_set("converters") {
  public_configs = [
    "//electron/build:electron_config",
  ]

  sources = [
    "callback_converter.cc",
    "callback_converter.h",
    "file_path_converter.h",
    "gurl_converter.h",
    "scoped_persistent.h",
    "string16_converter.h",
    "value_converter.cc",
    "value_converter.h",
  ]

  deps = [
    "//third_party/blink/public:blink_headers",
  ]
}
