import("//build/config/ui.gni")

source_set("dll") {
  public_configs = [ "//electron/chromium_src:chromium_src_config" ]

  include_dirs = [
    "//electron/chromium_src",
  ]
  configs += [ "//electron/build:electron_config" ]

  sources = [
    "chrome_main_delegate.cc",
    "chrome_main_delegate.h",
    "//chrome/app/chrome_dll_resource.h",
    "//chrome/app/chrome_main.cc",
    # "app/chrome_main_mac.h",
    # "app/chrome_main_mac.mm",
  ]

  deps = []

  if (is_win) {
    deps += [
      "//build/config/sanitizers:deps",
      "//chrome/common:features",
      "//chrome/install_static:install_static_util",
      "//chrome/install_static:secondary_module",
      "//chrome_elf",
      "//components/crash/content/app",
      "//components/policy:generated",
      "//content/app/resources",
      "//crypto",
      "//net:net_resources",
      "//ppapi/features",
      "//third_party/cld",
      "//third_party/wtl",
      "//ui/views",
    ]

    if (use_aura) {
      deps += [ "//ui/compositor" ]
    }
  }
}

source_set("exe") {
  public_configs = [ "//electron/chromium_src:chromium_src_config" ]

  include_dirs = [
    "//electron/chromium_src",
  ]

  configs += [ "//electron/build:electron_config" ]

  sources = []
  deps = []

  if (is_win) {
    sources += [
      "//chrome/app/chrome_exe_main_win.cc",
      "//chrome/app/chrome_watcher_client_win.cc",
      "//chrome/app/chrome_watcher_client_win.h",
      "//chrome/app/chrome_watcher_command_line_win.cc",
      "//chrome/app/chrome_watcher_command_line_win.h",
      "//chrome/app/main_dll_loader_win.cc",
      "//chrome/app/main_dll_loader_win.h",
      "//chrome/common/crash_keys.cc",
      "//chrome/common/crash_keys.h",
    ]

    deps += [
      "//base",
      "//breakpad:breakpad_handler",
      "//breakpad:breakpad_sender",
      "//chrome/browser:chrome_process_finder",
      "//chrome/chrome_watcher",
      "//chrome/chrome_watcher:client",
      "//chrome/common:constants",
      "//chrome/common:metrics_constants_util_win",
      "//chrome:file_pre_reader",
      "//chrome/install_static:secondary_module",
      "//chrome/installer/util:with_no_strings",
      "//chrome_elf",
      "//components/browser_watcher:browser_watcher_client",
      "//components/crash/content/app:run_as_crashpad_handler",
      "//components/flags_ui:switches",
      "//content:sandbox_helper_win",
      "//content/public/common:static_switches",
      "//crypto",
      "//sandbox",
      "//components/spellcheck:build_features",
    ]

    data_deps = [
      "//chrome/app/version_assembly:version_assembly_manifest",
    ]
  }
}
